--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "body-parser": "^1.19.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.17.1"
   }
 }
